[package]
name = "nomenox"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Sunju Kim <n.e.coli.1822@gmail.com>"]
description = "Pure-Rust protein function classifier for hypothetical proteins: a compact CNN distilled from an ESM-2 teacher, assigning Pfam families to sequences with no homology hit. Per-family calibrated thresholds keep only confident calls. Database-free, self-contained inference."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nomenox"
repository = "https://github.com/necoli1822/nomenox"
keywords = ["bioinformatics", "protein-function", "pfam", "cnn", "bacteria"]
categories = ["science", "command-line-utilities"]
exclude = ["vocab.json"]  # training-side artifact; the runtime vocab is embedded in weights.json.gz

[lib]
name = "nomenox"

[[bin]]
name = "nomenox"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }  # gzip-decompress embedded weights (pure Rust)
rayon = "1"   # data-parallel batch prediction (predict_many); scalar per-seq path unchanged

[profile.release]
lto = true
